--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/products?useSSL=false
+spring.datasource.url= jdbc:postgresql://localhost:5432/postgres?useSSL=false
 
 spring.datasource.username=postgres
-spring.datasource.password=mysecretpassword
+spring.datasource.password=ucllpassw0rd
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
@@ -13,3 +13,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+# spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
