added yaml files for deployment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/postgres?useSSL=false
+spring.datasource.url= jdbc:postgresql://macdroid:5432/postgres?useSSL=false
 
 spring.datasource.username=postgres
 spring.datasource.password=ucllpassw0rd
